--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
           <div class="navbar-nav">
             <a class="nav-item nav-link active" href="#">Home <span class="sr-only">(current)</span></a>
-            <a class="nav-item nav-link" href="#">90's Watchfaces</a>
+            <a class="nav-item nav-link" href="/nineties.html">90's Watchfaces</a>
             <a class="nav-item nav-link" href="#">Pop Watchfaces</a>
             <a class="nav-item nav-link" href="#">Minimalist Watchfaces</a>
             <a class="nav-item nav-link" href="#">Gamer Watchfaces</a>
@@ -49,7 +49,7 @@
 
     <div class="row">
         <div class="col">
-            <img src="/img/the_90s_card.png" alt="minimal" width="600">
+            <a href='/nineties.html'><img src="/img/the_90s_card.png" alt="minimal" width="600"></a>
         </div>
 
         <div class="col" style="visibility: hidden;">
